[update] add seperate error_symbol for charactor

--- a/Starship/starship.toml
+++ b/Starship/starship.toml
@@ -10,6 +10,7 @@ format = "took [$duration]($style) "
 
 [character]
 success_symbol = "[](bold green)" 
+error_symbol = "[](bold pink)" 
 
 [directory]
 truncation_length = 5
